# FileDimension

./: .env-sample  .gitignore  LOG.org  README.org  a.html  pyproject.toml  sqitch.conf
pg/: sqitch.plan
pg/deploy/: dim_file.sql
pg/deploy/data/: seed_root_directory.sql
pg/deploy/feature/: add_columns_and_comments.sql  auto_update_timestamp.sql
pg/deploy/fix/: unique_root_constraint.sql
pg/revert/: dim_file.sql
pg/revert/data/: seed_root_directory.sql
pg/revert/feature/: add_columns_and_comments.sql  auto_update_timestamp.sql
pg/revert/fix/: unique_root_constraint.sql
pg/verify/: dim_file.sql
pg/verify/data/: seed_root_directory.sql
pg/verify/feature/: add_columns_and_comments.sql  auto_update_timestamp.sql
pg/verify/fix/: unique_root_constraint.sql
src/file_dimension/: cli.py  core.py  database.py  files.py  finder.py  main.py  main_1.py  main_2.py  processor.py
src/file_dimension/.envs/: development.env  testing.env
tests/: test_insert.py  test_processor.py
