[project]
name = "FileDimension"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Patrick Allan", email = "patrick29501@gmx.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
